--- a/03 - JavaScript Primer, Part 1/primer/package.json
+++ b/03 - JavaScript Primer, Part 1/primer/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "nodemon": "^2.0.6"
+  },
+  "devDependencies": {
+    "babel-minify": "^0.5.1"
   }
 }
