--- a/09 - Using arrays, tuples and enums/types/tsconfig.json
+++ b/09 - Using arrays, tuples and enums/types/tsconfig.json
@@ -4,8 +4,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "declaration": true,
-    "strictNullChecks": true,
-    "noImplicitReturns": true
+    "strictNullChecks": true
     // "noImplicitAny": true,
   }
 }
